2013-03-26

	* libsylph/imap.c: properly escape folder/username/password which
	  include double-quote or backslash.

2013-03-13

	* libsylph/mh.c: mh_scan_tree_recursive(): fixed rebuilding of folder
	  tree which had been broken at 3.4.0beta1 (#103).

2013-02-15

	* procheader_scan_date_string(): optimized.

2013-02-15

	* libsylph/procheader.cprocheader_date_parse(): support ISO-type date
	  (YYYY-MM-DD HH:MM:SS).
	  Added workaround for time_t limit.
	  Supported more non-standard date.

2013-02-15

	* src/notificationwindow.c: notification_window_set_message():
	  check if the window exists.

2013-02-14

	* manual/ja/sylpheed.sgml: updated Japanese manual.

2013-02-14

	* libsylph/filter.c
	  libsylph/prefs_common.[ch]
	  src/prefs_common_dialog.c: added an option: "Do not classify message
	  as junk if sender is in the address book" (#77).

2013-02-14

	* src/notificationwindow.c: adjusted paddings again.
	  plugin/test/test.c: modified notification test.

2013-02-13

	* src/notificationwindow.c: adjusted paddings.

2013-02-13

	* src/plugin.[ch]
	  src/notificationwindow.[ch]
	  src/main.c
	  plugin/test/test.c: added plug-in API for notification window.

2013-02-13

	* src/inc.c
	  src/notificationwindow.[ch]: notification_window_open():
	  changed from notification_window_create().
	  Ignore first notify event when fading start.

2013-02-08

	* libsylph/prefs_common.[ch]
	  src/prefs_common_dialog.c
	  src/inc.c: added option: 'Show notification window when new messages
	  arrive'

2013-02-08

	* src/inc.[ch]
	  src/notificationwindow.[ch]: implemented new message notification
	  popup window.

2013-02-01

	* nsis/*.{nsh,nsi}: translate Start Menu shortcuts.

2013-01-31

	* version 3.4.0beta1

2013-01-31

	* src/mainwindow.c: help_command_line_show(): updated command line
	  help.

2013-01-31

	* src/rpop3.c: do not disconnect immediately but send QUIT on normal
	  POP3 errors.
	  Changed 'Refresh' button/menu to 'Resume'.

2013-01-31
