@@ -1,3 +1,7 @@
+2013-03-28
+
+	* src/compose.c: refactored compose_quote_fmt().
+
 2013-03-26
 
 	* libsylph/imap.c: properly escape folder/username/password which
